<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/empty" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/empty" />
    <TextView
     
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
     	android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:text="Finish" />

</LinearLayout>